# gaem_rust

./: Cargo.toml  README.md  rustfmt.toml
hello_macroquad/: Cargo.toml
hello_macroquad/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
plat/: Cargo.toml
plat/src/: main.rs
